tests/errors/test_14.x
// Break must be in a loop construction

fn main() -> int {

    break;

    if true {
        break;
    }
}